The restart button now has the same css properties when it is in focus, no more duplicate words on the typing test, put js and css files in the head tag to load it before the page loads to prevent flickering

--- a/static/styles.css
+++ b/static/styles.css
@@ -104,6 +104,7 @@ body {
     padding-right: 45px;
 }
 
-#restart:hover {
+#restart:hover, #restart:focus {
     background-color: #a6da95;
+    outline: none;
 }
